name:                china-dns
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/riaqn/china-dns#readme
license:             BSD3
license-file:        LICENSE
author:              Zesen Qian
maintainer:          haskell@riaqn.org
copyright:           GPL3
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable china-dns
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , resolve
                     , IntervalMap
                     , iproute
                     , hslogger
                     , network
                     , attoparsec
                     , attoparsec-binary
                     , bytestring
                     , transformers
  default-extensions:  MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
