name:                zhina-dns
version:             0.1.0.0
synopsis:            A DNS proxy preventing pollution and CDN-friendly
description:         Please see README.org
homepage:            https://github.com/riaqn/zhina-dns#readme
license:             BSD3
license-file:        LICENSE
author:              Zesen Qian
maintainer:          haskell@riaqn.org
copyright:           GPL3
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable zhina-dns
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , resolve
                     , IntervalMap
                     , hslogger
                     , network
                     , attoparsec
                     , attoparsec-binary
                     , bytestring
                     , transformers
                     , stm
                     , parsec
  default-extensions:  MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts

source-repository head
  type:     git
  location: https://github.com/riaqn/zhina-dns